--- a/templates/compras/lista_solicitudes.html
+++ b/templates/compras/lista_solicitudes.html
@@ -18,15 +18,46 @@ Solicitudes de Compra
 <div class="content-wrapper">
   <!-- Main content -->
   <section class="box">
+    {% if usuario.rol != 'gerente' %}
     <div class="col-md-12">
       <!-- general form elements -->
       <div class="box box-primary">
+        <h4 align='center'>Solicitudes realizadas</h4>
         <!-- form start -->
         <div class="box-body">
           <!-- Panel colapsable -->
           {% if object_list %}
           <div class="container col-md-12">
             {% for solicitud in object_list %}
+            {% include 'compras/solicitud.html' %}
+            {% endfor %}
+          </div>
+          {% else %}
+          <h3>No hay solicitudes realizadas</h3>
+          {% endif %}
+          <!-- /.box-body -->
+        </div>
+        <div class="box-footer text-center">
+          <a href="{% url 'compras:solicitud_crear' %}" class="btn btn-success">Nueva Solicitud</a>
+        </div>
+      </div>
+    </div>
+    {% endif %}
+
+    {% if usuario.rol != "operario" %}
+
+    <div class="col-md-12">
+      <!-- general form elements -->
+      <div class="box box-primary">
+        <h4 align='center'>Solicitudes por autorizar</h4>
+
+        <!-- form start -->
+
+        <div class="box-body">
+          <!-- Panel colapsable -->
+          {% if solicitudes_autorizar %}
+          <div class="container col-md-12">
+            {% for solicitud in solicitudes_autorizar %}
             <div class="panel-group" id="accordion">
               <div class="panel panel-default">
 
@@ -36,16 +67,18 @@ Solicitudes de Compra
                       Solucitud #{{solicitud.id}}
                     </a>
                     {% if solicitud.estado_aprobacion == 'pendiente' %}
-                    <i class="fa fa-circle text-yellow"></i> <!-- cambia color con el estado_aprobacion -->
+                    <i class="fa fa-circle text-grey"></i> <!-- cambia color con el estado_aprobacion -->
                     {% elif solicitud.estado_aprobacion == 'rechazada' %}
                     <i class="fa fa-circle text-red"></i> <!-- cambia color con el estado -->
+                    {% elif solicitud.estado_aprobacion == 'aprobado_jefe' %}
+                    <i class="fa fa-circle text-orange"></i> <!-- cambia color con el estado -->
                     {% else %}
                     <i class="fa fa-circle text-green"></i> <!-- cambia color con el estado -->
                     {% endif %}
-                    <a style="display: inline" href="#" class="btn btn-primary">Modificar Solicitud</a>
-                    <a style="display: inline" href="#" class="btn btn-danger">Eliminar Solicitud</a>
+                    <a style="display: inline" href="#" class="btn btn-primary">Autorizar Solicitud</a>
+                    <a style="display: inline" href="#" class="btn btn-danger">Rechazar Solicitud</a>
                   </h3>
-        
+
                 </div>
 
                 <div id="collapse{{solicitud.id}}" class="panel-collapse collapse">
@@ -84,8 +117,8 @@ Solicitudes de Compra
                       <label for="inputJust">Justificacion</label>
                       <textarea id="inputJust" class="form-control pull-right" name="inputJust" rows="1" cols="50"
                         readonly>
-                      {{solicitud.justificacion}}
-                    </textarea>
+                        {{solicitud.justificacion}}
+                      </textarea>
                     </div>
                   </div>
                   <!-- collapse -->
@@ -95,91 +128,93 @@ Solicitudes de Compra
             {% endfor %}
           </div>
           {% else %}
-          <h3>No hay solicitudes registradas</h3>
+          <h3>No hay solicitudes por autorizar</h3>
           {% endif %}
           <!-- /.box-body -->
         </div>
-        <div class="box-footer text-center">
-          <a href="{% url 'compras:solicitud_crear' %}" class="btn btn-success">Nueva Solicitud</a>
-        </div>            
-      </div>      
+        <!-- /.box -->
+        <!-- /.box-body -->
+      </div>
+      <!-- /.box -->
     </div>
+    {% endif %}
 
-    {% if usuario.rol == 'jefe_compras' or usuario.rol == 'gerente' %}
+    {% if usuario.rol == "jefe_compras" %}
 
     <div class="col-md-12">
       <!-- general form elements -->
       <div class="box box-primary">
+        <h4 align='center'>Solicitudes por cotizar</h4>
+
         <!-- form start -->
 
         <div class="box-body">
           <!-- Panel colapsable -->
-          {% if solicitudes_autorizar %}
+          {% if solicitudes_cotizar %}
           <div class="container col-md-12">
-            {% for solicitud in solicitudes_autorizar %}
+            {% for solicitud in solicitudes_cotizar %}
             <div class="panel-group" id="accordion">
-                <div class="panel panel-default">
-  
-                  <div class="panel-heading">
-                    <h3 class="panel-title">
-                      <a data-toggle="collapse" data-parent="#acordion" href="#collapse{{solicitud.id}}">
-                        Solucitud #{{solicitud.id}}
-                      </a>
-                      <i class="fa fa-circle text-yellow"></i> <!-- cambia color con el estado -->
-                    </h3>
+              <div class="panel panel-default">
 
+                <div class="panel-heading">
+                  <h3 class="panel-title">
+                    <a data-toggle="collapse" data-parent="#acordion" href="#collapse{{solicitud.id}}">
+                      Solucitud #{{solicitud.id}}
+                    </a>
+                    <i class="fa fa-circle text-green"></i> <!-- cambia color con el estado -->
+                    <a style="display: inline" href="#" class="btn btn-primary">Cotizaciones</a>
+                  </h3>
+
+                </div>
+
+                <div id="collapse{{solicitud.id}}" class="panel-collapse collapse">
+                  <div class="form-group row">
+                    <div class="col-xs-6">
+                      <label for="inputNombre">Nombre Solicitante</label>
+                      <input type="text" class="form-control" id="inputNombre" disabled value="{{solicitud.solicitante.get_full_name}}">
+                    </div>
+
+                    <div class="col-xs-3">
+                      <label for="inputId">Identificacion</label>
+                      <input type="text" class="form-control" id="inputId" disabled placeholder={{solicitud.solicitante}}>
+                    </div>
                   </div>
-  
-                  <div id="collapse{{solicitud.id}}" class="panel-collapse collapse">
-                    <div class="form-group row">
-                      <div class="col-xs-6">
-                        <label for="inputNombre">Nombre Solicitante</label>
-                        <input type="text" class="form-control" id="inputNombre" disabled value="{{solicitud.solicitante.get_full_name}}">
-                      </div>
-  
-                      <div class="col-xs-3">
-                        <label for="inputId">Identificacion</label>
-                        <input type="text" class="form-control" id="inputId" disabled placeholder={{solicitud.solicitante}}>
-                      </div>
+
+                  <div class="form-group row">
+                    <div class="col-xs-6">
+                      <label for="inputElemento">Articulo requerido</label>
+                      <ul>
+                        <li> {{solicitud.articulo.nombre}} - x{{solicitud.cantidad}}</li>
+                      </ul>
                     </div>
-  
-                    <div class="form-group row">
-                      <div class="col-xs-6">
-                        <label for="inputElemento">Articulos requeridos</label>
-                        <ul>
-                          {% for articulo in solicitud.articulos.all %}
-                          <li> {{articulo.nombre}} </li>
-                          {% endfor %}
-                        </ul>
-                      </div>
+                  </div>
+
+                  <div class="form-group row">
+                    <div class=" col-xs-6">
+                      <label for="exampleInputFile">Fecha esperada</label>
+                      <!-- Date -->
+                      <input disabled class="form-control pull-right datepicker" value="{{ solicitud.fecha_esperada}}"
+                        autocomplete="off">
                     </div>
-  
-                    <div class="form-group row">
-                      <div class=" col-xs-6">
-                        <label for="exampleInputFile">Fecha esperada</label>
-                        <!-- Date -->
-                        <input disabled class="form-control pull-right datepicker" value="{{ solicitud.fecha_esperada}}"
-                          autocomplete="off">
-                      </div>
-                    </div>
-  
-                    <div class="form-group row">
-                      <div class=" col-xs-6">
-                        <label for="inputJust">Justificacion</label>
-                        <textarea id="inputJust" class="form-control pull-right" name="inputJust" rows="1" cols="50"
-                          readonly>
+                  </div>
+
+                  <div class="form-group row">
+                    <div class=" col-xs-6">
+                      <label for="inputJust">Justificacion</label>
+                      <textarea id="inputJust" class="form-control pull-right" name="inputJust" rows="1" cols="50"
+                        readonly>
                         {{solicitud.justificacion}}
                       </textarea>
-                      </div>
                     </div>
-                    <!-- collapse -->
                   </div>
+                  <!-- collapse -->
                 </div>
               </div>
+            </div>
             {% endfor %}
           </div>
           {% else %}
-          <h3>No hay solicitudes por autorizar</h3>
+          <h3>No hay solicitudes por cotizar</h3>
           {% endif %}
           <!-- /.box-body -->
         </div>
